--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-main {
-  text-align: center;
-  vertical-align: center;
-  line-height: 100vh
+.App {
+  max-width: 600px;
+  margin: auto;
+  padding: 2rem;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  background-color: #f3f1f5;
 }
